comment processing - added rel level commentList